# bimquake

./: LICENSE  README.md  eq_resilience_library.py  setup.cfg  setup.py
bimquake/: __init__.py  eq_resilience_library.py
bimquake/ifc_processing/: IFC_objects.py  __init__.py  building.py  simple_objects.py  slab.py  structural_partitions.py  utils.py  wall.py
ifc_processing/: IFC_objects.py  building.py  slab.py  wall.py
