[metadata]
name = bimquake
version = 0.1.3
description = Python package for earthquake resilience assessment of masonry buildings, integrating IFC (Industry Foundation Classes) building information models with seismic hazard analysis and structural evaluation.
long_description = file: README.md
long_description_content_type = text/markdown
author = Filippo Landi, Giada Bartolini, Áron Friedman, Bence Popovics, Noémi Friedman
author_email = filippo.landi@ing.unipi.it, giada.bartolini@strath.ac.uk, friedrron@gmail.com, popbence@sztaki.hun-ren.hu, n.friedman@ilab.sztaki.hu
license = GPL-3.0-only
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    scikit-learn
    scipy
    pandas
    matplotlib
    reverse_geocoder
    folium
    shapely
    ifcopenshell
    plotly
    openpyxl
    nbformat

[options.package_data]
bimquake.hazard_data = *.json, *.mat

